# chackra-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: build_db_url.sh  init.sql
src/chackra_web/: __about__.py  __init__.py  main.py
src/chackra_web/auth/application/: change_role.py  create.py  delete.py  login.py
src/chackra_web/auth/domain/models/: auth.py  behavior.py  exceptions.py  repositories.py
src/chackra_web/auth/domain/services/: get_by_email.py  get_by_id.py  get_by_user_id.py  get_session_by_auth_id.py
src/chackra_web/auth/infraestructure/migrations/: __init__.py
src/chackra_web/auth/infraestructure/repositories/: __init__.py
src/chackra_web/auth/presentation/controllers/: auth_controller.py
src/chackra_web/domain/web/: app.py
src/chackra_web/entrypoints/: dependences_builder.py  task_schedule_worker.py  task_worker.py  web.py
src/chackra_web/food_track/application/: adding_item_into_to_buy_list.py  create_inventory.py  list_inventory_item.py
src/chackra_web/food_track/application/inventory/: create.py  delete.py  get_by_id.py  list.py  update.py
src/chackra_web/food_track/application/to_buy/: create.py  delete.py  generate_with_llm.py  get_by_id.py  list_lister.py  recommendation_with_llm.py  update.py
src/chackra_web/food_track/domain/models/: behavior.py  exceptions.py  inventory.py  repositories.py  to_buy.py
src/chackra_web/food_track/infraestructure/converter/: factory.py
src/chackra_web/food_track/infraestructure/migrations/: __init__.py
src/chackra_web/food_track/infraestructure/repositories/: __init__.py
src/chackra_web/food_track/presentation/controllers/: home.py  inventory_controller.py  list_inventory_controller.py
src/chackra_web/food_track/presentation/tasks/: periodic.py
src/chackra_web/health_track/domain/models/: weight_track.py
src/chackra_web/infraestructure/configuration/: dev.py  factory.py  prod.py
src/chackra_web/infraestructure/web/: factory.py  flask.py
src/chackra_web/presentation/static/css/: style.css
src/chackra_web/presentation/static/js/: main.js
src/chackra_web/shared/applications/: delete_user.py  register_user.py
src/chackra_web/shared/domain/model/: dependencies.py  extended_dependencies.py
src/chackra_web/shared/infraestructure/convertion_pagination/: factory.py
src/chackra_web/shared/infraestructure/convertion_specification/: factory.py
src/chackra_web/shared/infraestructure/handlers/: factory.py
src/chackra_web/shared/infraestructure/llm/: __init__.py
src/chackra_web/shared/infraestructure/logger/: factory.py  logging.py
src/chackra_web/shared/infraestructure/migrations/: factory.py
src/chackra_web/shared/infraestructure/notifications/: __init__.py
src/chackra_web/shared/infraestructure/pagination/: factory.py
src/chackra_web/shared/infraestructure/specifications/: factory.py
src/chackra_web/shared/infraestructure/tasks/: __init__.py
src/chackra_web/shared/infraestructure/uow/: factory.py  psycopg.py
src/chackra_web/user/application/: create.py  delete.py  get_by_id.py  list.py
src/chackra_web/user/application/additional_information/: get_by_user_id.py  upsert.py
src/chackra_web/user/domain/models/: additional_user.py  behavior.py  exceptions.py  repositories.py  user.py
src/chackra_web/user/domain/services/: get_by_id.py
src/chackra_web/user/infraestructure/converter/: factory.py
src/chackra_web/user/infraestructure/migrations/: __init__.py
src/chackra_web/user/infraestructure/repositories/: __init__.py
src/chackra_web/user/presentation/controllers/: list_users_controller.py  user_controller.py
src/chackra_web/web/domain/web/: app.py
src/chackra_web/web/entrypoints/: web.py
src/chackra_web/web/infraestructure/configuration/: dev.py  factory.py  prod.py
src/chackra_web/web/infraestructure/web/: factory.py  flask.py
src/chackra_web/web/presentation/templates/: about.html  base.html  (+3 more)
(+121 files in other folders)
