[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chackra-web"
dynamic = ["version"]
description = 'This is the base for chakra and integration'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Gabriel Vargas", email = "vmgabriel96@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "Flask>=3.1.2",
  "pydantic>=2.12.4",
  "psycopg[binary] >= 3.2.9",
  "bcrypt>=5.0.0",
  "python-dotenv>=1.0.0",
  "celery>=5.6.2",
  "redis>=7.1.0",
  "langchain-ollama>=1.0.1",
  "langchain-cerebras>=0.6.0",
]

[tool.hatch.envs.default]
extra-dependencies = []

[tool.hatch.envs.default.scripts]
web = "python -m flask run --host=0.0.0.0 --port=8000"
worker = "python -m chackra_web.entrypoints.task_worker"
schedule-worker = "python -m chackra_web.entrypoints.task_schedule_worker"

[tool.hatch.envs.prod]
inherits = ["default"]
extra-dependencies = [
    "gunicorn>=21.2.0"
]

[tool.hatch.envs.prod.scripts]
web = "gunicorn -w 2 -b 0.0.0.0:8000 'chackra_web.entrypoints.web:app'"


[tool.hatch.version]
path = "src/chackra_web/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/chackra_web tests}"

[tool.coverage.run]
source_pkgs = ["chackra_web", "tests"]
branch = true
parallel = true
omit = [
  "src/chackra_web/__about__.py",
]

[tool.coverage.paths]
chackra_web = ["src/chackra_web", "*/chackra-web/src/chackra_web"]
tests = ["tests", "*/chackra-web/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]